--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,8 @@ img {
 }
 
 body {
-  background-color: var --body-bcg-color;
-  color: var(--main-text-color);
+  background-color: #ffffff;
+  color: #212121;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-size: 14px;
@@ -82,7 +82,7 @@ body {
   display: block;
   /* min-width: 145px; */
   font-family: Raleway, sans-serif;
-  color: var(--main-text-color);
+  color: #212121;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -92,7 +92,7 @@ body {
 }
 
 .logo-color {
-  color: var(--logo-color);
+  color: #2196f3;
 }
 
 /* убираем маркировку списка */
@@ -145,7 +145,7 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  color: var(--main-text-color);
+  color: #212121;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -180,7 +180,7 @@ body {
   width: 16px;
   height: 12px;
   margin-right: 10px;
-  fill: var(--secondary-text-color);
+  fill: #757575;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -190,7 +190,7 @@ body {
   width: 10px;
   height: 16px;
   margin-right: 10px;
-  fill: var(--secondary-text-color);
+  fill: #757575;
   -webkit-transition: fill 250 ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250 ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -203,18 +203,18 @@ body {
 /* декорация кнопок навигации по сайту */
 .sitenav-link:hover,
 .sitenav-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .header-link:hover .e-mail,
 .header-link:focus .e-mail,
 .header-link:hover .smartphone,
 .header-link:focus .smartphone {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .current::after {
@@ -231,14 +231,14 @@ body {
 }
 
 .header-link {
-  color: var(--secondary-text-color);
+  color: #757575;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
 .header-link:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .link-font {
@@ -272,7 +272,7 @@ body {
   max-width: 630px;
   margin-right: auto;
   margin-left: auto;
-  color: var(--accent-button-text);
+  color: #ffffff;
 }
 
 /* отступ между заголовком и кнопкой */
@@ -290,7 +290,7 @@ body {
 .btn {
   padding: 10px 32px;
   font-family: inherit;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -305,8 +305,8 @@ body {
 
 .btn-hover:hover,
 .btn-focus:focus {
-  background-color: var(--hero-button-accent-background);
-  color: var(--accent-button-text);
+  background-color: #188ce8;
+  color: #ffffff;
 }
 
 /* формирование модального окна */
@@ -343,7 +343,7 @@ body {
   min-width: 528px;
   min-height: 581px;
   padding: 40px 41px;
-  background: var(--body-bcg-color);
+  background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -380,7 +380,7 @@ body {
 }
 
 .modal-close:hover .modal-close-icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 /* оформление формы ввода данных клиента модального окна */
@@ -400,7 +400,7 @@ body {
   line-height: 1.05;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--main-text-color);
+  color: #212121;
   margin-bottom: 12px;
 }
 
@@ -429,7 +429,7 @@ body {
 
 .input-field,
 .client-comment {
-  border: 1px solid var(--modal-client-border);
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   height: 40px;
   padding-left: 42px;
@@ -450,20 +450,20 @@ body {
 .client-label:hover .client-icon,
 .input-field:focus + .client-icon,
 .input-field:hover + .client-icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .input-field:hover,
 .input-field:focus {
-  border: 1px solid var(--accent-color);
-  outline-color: var(--accent-color);
+  border: 1px solid #2196f3;
+  outline-color: #2196f3;
 }
 
 /* назначение ховареа полю ввода при наведении для
 выделении его при наведении на иконку, когда курсор стоит
 в поле ввода */
 .client-label:hover > .input-field {
-  outline: 1px solid var(--accent-color);
+  outline: 1px solid #2196f3;
 }
 
 .client-comment {
@@ -519,31 +519,31 @@ body {
   background-color: #fafafa;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  -webkit-box-shadow: 0 0 0 0.1em var(--main-text-color);
-          box-shadow: 0 0 0 0.1em var(--main-text-color);
+  -webkit-box-shadow: 0 0 0 0.1em #212121;
+          box-shadow: 0 0 0 0.1em #212121;
 }
 
 /* Checked */
 .form-check-input:checked + .form-check-box {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
   background-image: url(../images/svg/check_mark.svg);
 }
 
 /* Focused */
 .form-check-input:focus + .form-check-box {
-  -webkit-box-shadow: 0 0 0 0.1em var(--accent-color);
-          box-shadow: 0 0 0 0.1em var(--accent-color);
+  -webkit-box-shadow: 0 0 0 0.1em #2196f3;
+          box-shadow: 0 0 0 0.1em #2196f3;
 }
 
 .form-agreement,
 .form-agreement-link {
   line-height: 1.71;
-  color: var(--secondary-text-color);
+  color: #757575;
   margin-right: 0.3em;
 }
 
 .form-agreement-link {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 /* Приоритеты компании  */
@@ -553,15 +553,15 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: calc(-1 * var(--card-set-gap));
-  margin-left: calc(-1 * var(--card-set-gap));
+  margin-top: calc(-1 * 30px);
+  margin-left: calc(-1 * 30px);
 }
 
 .priorities-item {
-  -ms-flex-preferred-size: calc((100% - var(--card-set-gap) * 4) / 4);
-      flex-basis: calc((100% - var(--card-set-gap) * 4) / 4);
-  margin-top: var(--card-set-gap);
-  margin-left: var(--card-set-gap);
+  -ms-flex-preferred-size: calc((100% - 30px * 4) / 4);
+      flex-basis: calc((100% - 30px * 4) / 4);
+  margin-top: 30px;
+  margin-left: 30px;
 }
 
 .priorities-item + .priorities-item {
@@ -602,7 +602,7 @@ body {
 }
 
 .priorities-item p {
-  color: var(--secondary-text-color);
+  color: #757575;
   line-height: 1.71;
 }
 
@@ -627,17 +627,17 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   /* Компенсируем маржины элементов */
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * 30px);
+  margin-top: calc(-1 * 30px);
 }
 
 .activity-item {
   /* Задаём всем элементам маржины слева и сверху */
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
+  margin-left: 30px;
+  margin-top: 30px;
   /*  Задаём ширину элементов  */
-  -ms-flex-preferred-size: calc((100% - var(--card-set-gap) * 3) / 3);
-      flex-basis: calc((100% - var(--card-set-gap) * 3) / 3);
+  -ms-flex-preferred-size: calc((100% - 30px * 3) / 3);
+      flex-basis: calc((100% - 30px * 3) / 3);
 }
 
 .activity-header,
@@ -671,13 +671,13 @@ body {
   background: rgba(47, 48, 58, 0.8);
   font-weight: 700;
   text-transform: uppercase;
-  color: var(--accent-button-text);
+  color: #ffffff;
   /* border: 1px solid red; */
 }
 
 /* секция ourteam */
 .section.ourteam {
-  background-color: var(--secondary-bcg);
+  background-color: #f5f4fa;
 }
 
 /* flex список Наша команда */
@@ -688,15 +688,15 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   /* Компенсируем маржины элементов */
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * 30px);
+  margin-top: calc(-1 * 30px);
 }
 
 .ourteam-item {
-  -ms-flex-preferred-size: calc((100% - var(--card-set-gap) * 4) / 4);
-      flex-basis: calc((100% - var(--card-set-gap) * 4) / 4);
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
+  -ms-flex-preferred-size: calc((100% - 30px * 4) / 4);
+      flex-basis: calc((100% - 30px * 4) / 4);
+  margin-left: 30px;
+  margin-top: 30px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -717,7 +717,7 @@ body {
 
 /* подписи к фотографиям сотрудников */
 .ourteam-person-activity {
-  color: var(--secondary-text-color);
+  color: #757575;
   font-size: 16px;
   line-height: 1.19;
   margin-bottom: 16px;
@@ -757,13 +757,13 @@ body {
 /* назанчение hover + focus фону иконки */
 .ourteam-social-link:hover,
 .ourteam-social-link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .icon {
   width: 20px;
   height: 20px;
-  fill: var(--social-link-color);
+  fill: #afb1b8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -773,7 +773,7 @@ body {
  к иконке, т.к. она указана в конце */
 .ourteam-social-link:hover .icon,
 .ourteam-social-link:focus .icon {
-  fill: var(--accent-button-text);
+  fill: #ffffff;
 }
 
 /* our customers */
@@ -783,7 +783,7 @@ body {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--main-text-color);
+  color: #212121;
   margin-bottom: 50px;
 }
 
@@ -795,7 +795,7 @@ body {
 }
 
 .customer-item:not(:last-child) {
-  margin-right: var(--card-set-gap);
+  margin-right: 30px;
 }
 
 .customer-item-link {
@@ -810,34 +810,34 @@ body {
           align-items: center;
   width: 170px;
   height: 90px;
-  border: 1px solid var(--social-link-color);
+  border: 1px solid #afb1b8;
   border-radius: 4px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-icon {
-  fill: var(--social-link-color);
+  fill: #afb1b8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-item-link:hover .customer-icon,
 .customer-item-link:focus .customer-icon {
-  fill: var(--accent-color);
+  fill: #2196f3;
 }
 
 .customer-item-link:hover,
 .customer-item-link:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
 }
 
 /* formating footer */
 .section.page-footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: var(--hero-footer-bcg-color);
-  color: var(--accent-button-text);
+  background-color: #2f303a;
+  color: #ffffff;
 }
 
 /* сетка элементов футера */
@@ -867,11 +867,11 @@ body {
   margin-bottom: 20px;
   margin-right: 0;
   padding: 0;
-  color: var(--accent-button-text);
+  color: #ffffff;
 }
 
 .footer .street {
-  color: var(--accent-button-text);
+  color: #ffffff;
   font-style: normal;
   line-height: 1.19;
 }
@@ -891,7 +891,7 @@ body {
 
 .address-item:not(.street):hover,
 .address-item:not(.street):focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .social-call,
@@ -899,7 +899,7 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 20px;
-  color: var(--accent-button-text);
+  color: #ffffff;
 }
 
 .social-link {
@@ -939,7 +939,7 @@ body {
 
 .social-link:hover,
 .social-link:focus {
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 /* формирование формы ввода почты в футере */
@@ -1025,7 +1025,7 @@ body {
 }
 
 .fly {
-  fill: var(--accent-button-text);
+  fill: #ffffff;
   margin-left: 10px;
 }
 
@@ -1059,8 +1059,8 @@ body {
 }
 
 .navigation .btn {
-  background-color: var(--secondary-bcg);
-  color: var(--main-text-color);
+  background-color: #f5f4fa;
+  color: #212121;
   padding-top: 6px;
   padding-right: 22px;
   padding-bottom: 6px;
@@ -1080,8 +1080,8 @@ body {
 
 .navigation .btn-hover:hover,
 .navigation .btn-focus:focus {
-  background-color: var(--accent-color);
-  color: var(--accent-button-text);
+  background-color: #2196f3;
+  color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -1092,15 +1092,15 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: calc(-1 * var(--card-set-gap));
-  margin-left: calc(-1 * var(--card-set-gap));
+  margin-top: calc(-1 * 30px);
+  margin-left: calc(-1 * 30px);
 }
 
 .description-item {
-  -ms-flex-preferred-size: calc((100% - var(--card-set-gap) * 3) / 3);
-      flex-basis: calc((100% - var(--card-set-gap) * 3) / 3);
-  margin-top: var(--card-set-gap);
-  margin-left: var(--card-set-gap);
+  -ms-flex-preferred-size: calc((100% - 30px * 3) / 3);
+      flex-basis: calc((100% - 30px * 3) / 3);
+  margin-top: 30px;
+  margin-left: 30px;
 }
 
 /* Описание работ Portfolio */
@@ -1139,7 +1139,7 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: var(--main-text-color);
+  color: #212121;
   margin-bottom: 4px;
 }
 
@@ -1147,7 +1147,7 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
+  color: #757575;
 }
 
 /* формирование overlay */
@@ -1176,7 +1176,7 @@ body {
 .description-link:focus .overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .portfolio .overlay-text {
@@ -1185,6 +1185,6 @@ body {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  color: var(--accent-button-text);
+  color: #ffffff;
 }
 /*# sourceMappingURL=main.css.map */
