--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,23 +10,21 @@
 /* цвет фона разделов hero & footer  #2f303a */
 /* установка зазора между элементами flexbox --card-set-gap: 30px; */
 
-:root {
-  $body-bcg-color: #ffffff;
-  $logo-color: #2196f3;
-  $main-text-color: #212121;
-  $secondary-text-color: #757575;
+$logo-color: #2196f3;
+$main-text-color: #212121;
+$secondary-text-color: #757575;
+$body-bcg-color: #ffffff;
 
-  $hero-button-accent-background: #188ce8;
-  $accent-button-text: #ffffff;
+$hero-button-accent-background: #188ce8;
+$accent-button-text: #ffffff;
 
-  $accent-color: #2196f3;
-  $hero-footer-bcg-color: #2f303a;
-  $header-border: #ececec;
-  $secondary-bcg: #f5f4fa;
-  $social-link-color: #afb1b8;
-  $card-set-gap: 30px;
-  $-modal-client-border: rgba(33, 33, 33, 0.2);
-}
+$accent-color: #2196f3;
+$hero-footer-bcg-color: #2f303a;
+$header-border: #ececec;
+$secondary-bcg: #f5f4fa;
+$social-link-color: #afb1b8;
+$card-set-gap: 30px;
+$modal-client-border: rgba(33, 33, 33, 0.2);
 
 /* сброс стиля кнопок */
 button {
@@ -59,8 +57,8 @@ img {
 }
 
 body {
-  background-color: var (--body-bcg-color);
-  color: var(--main-text-color);
+  background-color: $body-bcg-color;
+  color: $main-text-color;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-size: 14px;
@@ -100,7 +98,7 @@ body {
   display: block;
   /* min-width: 145px; */
   font-family: Raleway, sans-serif;
-  color: var(--main-text-color);
+  color: $main-text-color;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -110,7 +108,7 @@ body {
 }
 
 .logo-color {
-  color: var(--logo-color);
+  color: $logo-color;
 }
 
 /* убираем маркировку списка */
@@ -152,7 +150,7 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  color: var(--main-text-color);
+  color: $main-text-color;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -179,7 +177,7 @@ body {
   width: 16px;
   height: 12px;
   margin-right: 10px;
-  fill: var(--secondary-text-color);
+  fill: $secondary-text-color;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -189,7 +187,7 @@ body {
   width: 10px;
   height: 16px;
   margin-right: 10px;
-  fill: var(--secondary-text-color);
+  fill: $secondary-text-color;
 
   transition: fill 250 ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -202,18 +200,18 @@ body {
 /* декорация кнопок навигации по сайту */
 .sitenav-link:hover,
 .sitenav-link:focus {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .header-link:hover .e-mail,
 .header-link:focus .e-mail,
 .header-link:hover .smartphone,
 .header-link:focus .smartphone {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 .current {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .current::after {
@@ -231,14 +229,14 @@ body {
 }
 
 .header-link {
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
 .header-link:focus {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .link-font {
@@ -278,7 +276,7 @@ body {
   max-width: 630px;
   margin-right: auto;
   margin-left: auto;
-  color: var(--accent-button-text);
+  color: $accent-button-text;
 }
 
 /* отступ между заголовком и кнопкой */
@@ -296,7 +294,7 @@ body {
 .btn {
   padding: 10px 32px;
   font-family: inherit;
-  background-color: var(--accent-color);
+  background-color: $accent-color;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -312,8 +310,8 @@ body {
 
 .btn-hover:hover,
 .btn-focus:focus {
-  background-color: var(--hero-button-accent-background);
-  color: var(--accent-button-text);
+  background-color: $hero-button-accent-background;
+  color: $accent-button-text;
 }
 
 /* формирование модального окна */
@@ -354,7 +352,7 @@ body {
   min-height: 581px;
   padding: 40px 41px;
 
-  background: var(--body-bcg-color);
+  background: $body-bcg-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -384,7 +382,7 @@ body {
 }
 
 .modal-close:hover .modal-close-icon {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 /* оформление формы ввода данных клиента модального окна */
@@ -400,7 +398,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 
-  color: var(--main-text-color);
+  color: $main-text-color;
   margin-bottom: 12px;
 }
 
@@ -424,7 +422,7 @@ body {
 
 .input-field,
 .client-comment {
-  border: 1px solid var(--modal-client-border);
+  border: 1px solid $modal-client-border;
   border-radius: 4px;
   height: 40px;
   padding-left: 42px;
@@ -445,20 +443,20 @@ body {
 .client-label:hover .client-icon,
 .input-field:focus + .client-icon,
 .input-field:hover + .client-icon {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 .input-field:hover,
 .input-field:focus {
-  border: 1px solid var(--accent-color);
-  outline-color: var(--accent-color);
+  border: 1px solid $accent-color;
+  outline-color: $accent-color;
 }
 
 /* назначение ховареа полю ввода при наведении для
 выделении его при наведении на иконку, когда курсор стоит
 в поле ввода */
 .client-label:hover > .input-field {
-  outline: 1px solid var(--accent-color);
+  outline: 1px solid $accent-color;
 }
 
 .client-comment {
@@ -508,31 +506,31 @@ body {
   background-color: rgb(250, 250, 250);
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  box-shadow: 0 0 0 0.1em var(--main-text-color);
+  box-shadow: 0 0 0 0.1em $main-text-color;
 }
 
 /* Checked */
 
 .form-check-input:checked + .form-check-box {
-  background-color: var(--accent-color);
+  background-color: $accent-color;
   background-image: url(../images/svg/check_mark.svg);
 }
 
 /* Focused */
 
 .form-check-input:focus + .form-check-box {
-  box-shadow: 0 0 0 0.1em var(--accent-color);
+  box-shadow: 0 0 0 0.1em $accent-color;
 }
 
 .form-agreement,
 .form-agreement-link {
   line-height: 1.71;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
   margin-right: 0.3em;
 }
 
 .form-agreement-link {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 /* Приоритеты компании  */
@@ -540,14 +538,14 @@ body {
 .company-priorities {
   display: flex;
   flex-wrap: wrap;
-  margin-top: calc(-1 * var(--card-set-gap));
-  margin-left: calc(-1 * var(--card-set-gap));
+  margin-top: calc(-1 * #{$card-set-gap});
+  margin-left: calc(-1 * #{$card-set-gap});
 }
 
 .priorities-item {
-  flex-basis: calc((100% - var(--card-set-gap) * 4) / 4);
-  margin-top: var(--card-set-gap);
-  margin-left: var(--card-set-gap);
+  flex-basis: calc((100% - #{$card-set-gap} * 4) / 4);
+  margin-top: #{$card-set-gap};
+  margin-left: #{$card-set-gap};
 }
 
 .priorities-item + .priorities-item {
@@ -590,7 +588,7 @@ body {
 }
 
 .priorities-item p {
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
   line-height: 1.71;
 }
 
@@ -612,16 +610,16 @@ body {
   /* Делаем Flex-контейнет многострочным */
   flex-wrap: wrap;
   /* Компенсируем маржины элементов */
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * #{$card-set-gap});
+  margin-top: calc(-1 * #{$card-set-gap});
 }
 
 .activity-item {
   /* Задаём всем элементам маржины слева и сверху */
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
+  margin-left: #{$card-set-gap};
+  margin-top: #{$card-set-gap};
   /*  Задаём ширину элементов  */
-  flex-basis: calc((100% - var(--card-set-gap) * 3) / 3);
+  flex-basis: calc((100% - #{$card-set-gap} * 3) / 3);
 }
 
 .activity-header,
@@ -652,14 +650,14 @@ body {
 
   font-weight: 700;
   text-transform: uppercase;
-  color: var(--accent-button-text);
+  color: $accent-button-text;
   /* border: 1px solid red; */
 }
 
 /* секция ourteam */
 
 .section.ourteam {
-  background-color: var(--secondary-bcg);
+  background-color: $secondary-bcg;
 }
 
 /* flex список Наша команда */
@@ -667,14 +665,14 @@ body {
   display: flex;
   flex-wrap: wrap;
   /* Компенсируем маржины элементов */
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * #{$card-set-gap});
+  margin-top: calc(-1 * #{$card-set-gap});
 }
 
 .ourteam-item {
-  flex-basis: calc((100% - var(--card-set-gap) * 4) / 4);
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
+  flex-basis: calc((100% - #{$card-set-gap} * 4) / 4);
+  margin-left: #{$card-set-gap};
+  margin-top: #{$card-set-gap};
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -695,7 +693,7 @@ body {
 
 /* подписи к фотографиям сотрудников */
 .ourteam-person-activity {
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
   font-size: 16px;
   line-height: 1.19;
   margin-bottom: 16px;
@@ -727,13 +725,13 @@ body {
 /* назанчение hover + focus фону иконки */
 .ourteam-social-link:hover,
 .ourteam-social-link:focus {
-  background-color: var(--accent-color);
+  background-color: $accent-color;
 }
 
 .icon {
   width: 20px;
   height: 20px;
-  fill: var(--social-link-color);
+  fill: $social-link-color;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -743,7 +741,7 @@ body {
  к иконке, т.к. она указана в конце */
 .ourteam-social-link:hover .icon,
 .ourteam-social-link:focus .icon {
-  fill: var(--accent-button-text);
+  fill: $accent-button-text;
 }
 
 /* our customers */
@@ -754,7 +752,7 @@ body {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--main-text-color);
+  color: $main-text-color;
   margin-bottom: 50px;
 }
 
@@ -764,7 +762,7 @@ body {
 }
 
 .customer-item:not(:last-child) {
-  margin-right: var(--card-set-gap);
+  margin-right: #{$card-set-gap};
 }
 
 .customer-item-link {
@@ -773,34 +771,34 @@ body {
   align-items: center;
   width: 170px;
   height: 90px;
-  border: 1px solid var(--social-link-color);
+  border: 1px solid $social-link-color;
   border-radius: 4px;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-icon {
-  fill: var(--social-link-color);
+  fill: $social-link-color;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-item-link:hover .customer-icon,
 .customer-item-link:focus .customer-icon {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 .customer-item-link:hover,
 .customer-item-link:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid $accent-color;
 }
 
 /* formating footer */
 .section.page-footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: var(--hero-footer-bcg-color);
-  color: var(--accent-button-text);
+  background-color: $hero-footer-bcg-color;
+  color: $accent-button-text;
 }
 
 /* сетка элементов футера */
@@ -825,11 +823,11 @@ body {
   margin-bottom: 20px;
   margin-right: 0;
   padding: 0;
-  color: var(--accent-button-text);
+  color: $accent-button-text;
 }
 
 .footer .street {
-  color: var(--accent-button-text);
+  color: $accent-button-text;
   font-style: normal;
   line-height: 1.19;
 }
@@ -849,7 +847,7 @@ body {
 
 .address-item:not(.street):hover,
 .address-item:not(.street):focus {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .social-call,
@@ -858,7 +856,7 @@ body {
   text-transform: uppercase;
   margin-bottom: 20px;
 
-  color: var(--accent-button-text);
+  color: $accent-button-text;
 }
 
 .social-link {
@@ -897,7 +895,7 @@ body {
 
 .social-link:hover,
 .social-link:focus {
-  background-color: var(--accent-color);
+  background-color: $accent-color;
 }
 
 /* формирование формы ввода почты в футере */
@@ -949,7 +947,7 @@ body {
 }
 
 .fly {
-  fill: var(--accent-button-text);
+  fill: $accent-button-text;
   margin-left: 10px;
 }
 
@@ -981,8 +979,8 @@ body {
 }
 
 .navigation .btn {
-  background-color: var(--secondary-bcg);
-  color: var(--main-text-color);
+  background-color: $secondary-bcg;
+  color: $main-text-color;
 
   padding-top: 6px;
   padding-right: 22px;
@@ -1006,8 +1004,8 @@ body {
 
 .navigation .btn-hover:hover,
 .navigation .btn-focus:focus {
-  background-color: var(--accent-color);
-  color: var(--accent-button-text);
+  background-color: $accent-color;
+  color: $accent-button-text;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -1015,15 +1013,15 @@ body {
 .description {
   display: flex;
   flex-wrap: wrap;
-  margin-top: calc(-1 * var(--card-set-gap));
-  margin-left: calc(-1 * var(--card-set-gap));
+  margin-top: calc(-1 * #{$card-set-gap});
+  margin-left: calc(-1 * #{$card-set-gap});
 }
 
 .description-item {
-  flex-basis: calc((100% - var(--card-set-gap) * 3) / 3);
+  flex-basis: calc((100% - #{$card-set-gap} * 3) / 3);
 
-  margin-top: var(--card-set-gap);
-  margin-left: var(--card-set-gap);
+  margin-top: #{$card-set-gap};
+  margin-left: #{$card-set-gap};
 }
 
 /* Описание работ Portfolio */
@@ -1056,7 +1054,7 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: var(--main-text-color);
+  color: $main-text-color;
   margin-bottom: 4px;
 }
 
@@ -1064,7 +1062,7 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
 }
 
 /* формирование overlay */
@@ -1092,7 +1090,7 @@ body {
 .description-link:hover .overlay,
 .description-link:focus .overlay {
   transform: translateY(0);
-  background-color: var(--accent-color);
+  background-color: $accent-color;
 }
 
 .portfolio .overlay-text {
@@ -1101,5 +1099,5 @@ body {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  color: var(--accent-button-text);
+  color: $accent-button-text;
 }
