переформатирована секция header обеих страниц

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ body {
   padding-left: 15px;
 }
 
-/* скрываем вспомогательные заголовки */
+/* скрываем вспомогательные заголовки и др. элементы */
 .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -75,6 +75,16 @@ body {
   height: 1px !important;
   width: 1px !important;
   overflow: hidden;
+}
+
+/* убираем маркировку списка */
+.no-list {
+  list-style: none;
+}
+
+/* убираем подчеркивание ссылок */
+.no-line {
+  text-decoration: none;
 }
 
 /* logo style */
@@ -95,25 +105,15 @@ body {
   color: #2196f3;
 }
 
-/* убираем маркировку списка */
-.no-list {
-  list-style: none;
-}
-
-/* убираем подчеркивание ссылок */
-.no-line {
-  text-decoration: none;
-}
-
 /* header - верхняя линия сайта */
-.section.header {
+.header--geometry {
   padding-top: 0;
   padding-bottom: 0;
   border-bottom: 1px solid #ececec;
 }
 
 /* flexbox для header */
-.header-nav {
+.header-navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -122,7 +122,7 @@ body {
           align-items: center;
 }
 
-.sitenav {
+.navigation-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,13 +134,13 @@ body {
   margin-right: auto;
 }
 
-.sitenav-links {
+.navigation-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.sitenav-link {
+.navigation-block__link {
   position: relative;
   display: block;
   padding-top: 32px;
@@ -151,17 +151,17 @@ body {
 }
 
 /* установка расстояния 50px между элементами */
-.sitenav-links li:not(:last-child) {
+.navigation-block__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header-links {
+.contacts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.header-links > .header-link {
+.contacts > .contacts_link {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -196,20 +196,20 @@ body {
 }
 
 /* установка расстояния 50px между элементами соседи */
-.header-link + .header-link {
+.contacts_link + .contacts_link {
   margin-left: 50px;
 }
 
 /* декорация кнопок навигации по сайту */
-.sitenav-link:hover,
-.sitenav-link:focus {
+.navigation-block__link:hover,
+.navigation-block__link:focus {
   color: #2196f3;
 }
 
-.header-link:hover .e-mail,
-.header-link:focus .e-mail,
-.header-link:hover .smartphone,
-.header-link:focus .smartphone {
+.contacts_link:hover .e-mail,
+.contacts_link:focus .e-mail,
+.contacts_link:hover .smartphone,
+.contacts_link:focus .smartphone {
   fill: #2196f3;
 }
 
@@ -230,14 +230,14 @@ body {
   background-repeat: no-repeat;
 }
 
-.header-link {
+.contacts_link {
   color: #757575;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link:hover,
-.header-link:focus {
+.contacts_link:hover,
+.contacts_link:focus {
   color: #2196f3;
 }
 
