--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,7 +22,7 @@ $accent-color: #2196f3;
 $hero-footer-bcg-color: #2f303a;
 $header-border: #ececec;
 $secondary-bcg: #f5f4fa;
-$social-link-color: #afb1b8;
+$social__link-color: #afb1b8;
 $card-set-gap: 30px;
 $modal-client-border: rgba(33, 33, 33, 0.2);
 
@@ -251,7 +251,7 @@ body {
   padding: 0;
 }
 
-.hero-bg-image {
+.hero__bg-image {
   background-color: #c4c4c4;
   background-image: linear-gradient(
       to right,
@@ -269,7 +269,7 @@ body {
 
 /* формирование padding секции hero*/
 
-.hero-definition {
+.hero__definition {
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
@@ -280,7 +280,7 @@ body {
 }
 
 /* отступ между заголовком и кнопкой */
-.hero-title {
+.hero__title {
   margin-bottom: 30px;
   font-family: inherit;
   font-weight: 900;
@@ -368,30 +368,30 @@ body {
   width: 30px;
   height: 30px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-icon {
+.modal-close__icon {
   fill: #000;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.modal-close:hover .modal-close-icon {
+.modal-close:hover .modal-close__icon {
   fill: $accent-color;
 }
 
 /* оформление формы ввода данных клиента модального окна */
-.client-form {
+.registration-form {
   display: flex;
   flex-direction: column;
 }
 
-.client-form-name {
+.registration-form__header {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.05;
@@ -402,17 +402,17 @@ body {
   margin-bottom: 12px;
 }
 
-.client-label {
+.label {
   position: relative;
   display: flex;
   flex-direction: column;
 }
 
-.field-description {
+.label__description {
   margin-bottom: 4px;
 }
 
-.client-icon {
+.label__icon {
   position: absolute;
   left: 12px;
   top: 30px;
@@ -420,8 +420,8 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-field,
-.client-comment {
+.label__input-field,
+.registration-form__comment {
   border: 1px solid $modal-client-border;
   border-radius: 4px;
   height: 40px;
@@ -430,24 +430,18 @@ body {
   transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-form label:nth-child(-n + 5) {
+.registration-form .label:nth-child(-n + 5) {
   margin-top: 10px;
 }
 
-/* нужно переназначить отступ на элемент снизу, 
-задав маржин-топ */
-.client-comment {
-  margin-bottom: 20px;
-}
-
-.client-label:hover .client-icon,
-.input-field:focus + .client-icon,
-.input-field:hover + .client-icon {
+.label:hover .label__icon,
+.label__input-field:hover + .label__icon,
+.label__input-field:focus + .label__icon {
   fill: $accent-color;
 }
 
-.input-field:hover,
-.input-field:focus {
+.label__input-field:hover,
+.label__input-field:focus {
   border: 1px solid $accent-color;
   outline-color: $accent-color;
 }
@@ -455,18 +449,28 @@ body {
 /* назначение ховареа полю ввода при наведении для
 выделении его при наведении на иконку, когда курсор стоит
 в поле ввода */
-.client-label:hover > .input-field {
+.label:hover > .label__input-field {
   outline: 1px solid $accent-color;
 }
 
-.client-comment {
+.registration-form__comment {
   resize: none;
   width: 448px;
   height: 120px;
   padding: 12px 16px;
 }
 
-.client-form-send.btn {
+/* форма принятия условий */
+
+.form-check {
+  display: flex;
+  position: relative;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.registration-form-send {
   width: 200px;
   height: 50px;
   align-self: center;
@@ -475,17 +479,8 @@ body {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* формируем кастомный чек-бокс */
-
-.form-check {
-  display: flex;
-  position: relative;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
-/* прячем браузерный чек-бокс используя ранее описанный form-check-input */
-/* .form-check-input {
+/* прячем браузерный чек-бокс используя ранее описанный form-check__input */
+/* .form-check__input {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -497,7 +492,8 @@ body {
   opacity: 0;
 } */
 
-.form-check-box {
+/* кастомный чек-бокс */
+.form-check__box {
   width: 16px;
   height: 15px;
   margin-right: 9px;
@@ -511,49 +507,49 @@ body {
 
 /* Checked */
 
-.form-check-input:checked + .form-check-box {
+.form-check__input:checked + .form-check__box {
   background-color: $accent-color;
   background-image: url(../images/svg/check_mark.svg);
 }
 
 /* Focused */
 
-.form-check-input:focus + .form-check-box {
+.form-check__input:focus + .form-check__box {
   box-shadow: 0 0 0 0.1em $accent-color;
 }
 
-.form-agreement,
-.form-agreement-link {
+.form-check__agreement,
+.form-check__link {
   line-height: 1.71;
   color: $secondary-text-color;
   margin-right: 0.3em;
 }
 
-.form-agreement-link {
+.form-check__link {
   color: $accent-color;
 }
 
 /* Приоритеты компании  */
 
-.company-priorities {
+.priorities {
   display: flex;
   flex-wrap: wrap;
   margin-top: calc(-1 * #{$card-set-gap});
   margin-left: calc(-1 * #{$card-set-gap});
 }
 
-.priorities-item {
+.priorities__item {
   flex-basis: calc((100% - #{$card-set-gap} * 4) / 4);
   margin-top: #{$card-set-gap};
   margin-left: #{$card-set-gap};
 }
 
-.priorities-item + .priorities-item {
+.priorities__item + .priorities__item {
   margin-left: 30px;
 }
 
 /* формирование и позиционирование картинок svg приоритета через background-image */
-.priorities-item::before {
+.priorities__item::before {
   content: '';
   display: block;
   height: 120px;
@@ -583,29 +579,27 @@ body {
   background-image: url(../images/svg/astronaut.svg);
 }
 
-.priorities-header {
-  margin-bottom: 10px;
-}
-
-.priorities-item p {
+.priorities__item p {
   color: $secondary-text-color;
   line-height: 1.71;
 }
 
-.priorities-header {
+.priorities__header {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
+  margin-bottom: 10px;
 }
 
 /* секция Чем мы занимаемся и Наша команда */
-.section.our-activity {
+.company-activity {
   padding-top: 0;
 }
 
-.activity {
+.activity-description {
   display: flex;
   /* Делаем Flex-контейнет многострочным */
   flex-wrap: wrap;
@@ -614,7 +608,7 @@ body {
   margin-top: calc(-1 * #{$card-set-gap});
 }
 
-.activity-item {
+.activity-description__item {
   /* Задаём всем элементам маржины слева и сверху */
   margin-left: #{$card-set-gap};
   margin-top: #{$card-set-gap};
@@ -622,8 +616,8 @@ body {
   flex-basis: calc((100% - #{$card-set-gap} * 3) / 3);
 }
 
-.activity-header,
-.ourteam-header {
+.company-activity__header,
+.ourteam__header {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -631,11 +625,11 @@ body {
   line-height: 1.17;
 }
 
-.thumb {
+.activity-description__thumb {
   position: relative;
 }
 
-.thumb-text {
+.activity-description__thumb-text {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -656,12 +650,12 @@ body {
 
 /* секция ourteam */
 
-.section.ourteam {
+.ourteam {
   background-color: $secondary-bcg;
 }
 
 /* flex список Наша команда */
-.ourteam-list {
+.ourteam-members {
   display: flex;
   flex-wrap: wrap;
   /* Компенсируем маржины элементов */
@@ -669,7 +663,7 @@ body {
   margin-top: calc(-1 * #{$card-set-gap});
 }
 
-.ourteam-item {
+.ourteam-members__item {
   flex-basis: calc((100% - #{$card-set-gap} * 4) / 4);
   margin-left: #{$card-set-gap};
   margin-top: #{$card-set-gap};
@@ -679,27 +673,27 @@ body {
 }
 
 /* our-team представление членов команды */
-.ourteam-item-title {
+.ourteam-members__title {
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
 }
 
-.ourteam h3 {
+.ourteam-members__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
 }
 
 /* подписи к фотографиям сотрудников */
-.ourteam-person-activity {
+.ourteam-members__position {
   color: $secondary-text-color;
   font-size: 16px;
   line-height: 1.19;
   margin-bottom: 16px;
 }
 
-.ourteam-member {
+.ourteam-members__name {
   margin-bottom: 10px;
 }
 
@@ -707,7 +701,7 @@ body {
   display: inline-flex;
 }
 
-.ourteam-social-link {
+.social-icons__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -718,20 +712,20 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icons-item:not(:last-child) {
+.social-icons__item:not(:last-child) {
   margin-right: 10px;
 }
 
 /* назанчение hover + focus фону иконки */
-.ourteam-social-link:hover,
-.ourteam-social-link:focus {
+.social-icons__link:hover,
+.social-icons__link:focus {
   background-color: $accent-color;
 }
 
 .icon {
   width: 20px;
   height: 20px;
-  fill: $social-link-color;
+  fill: $social__link-color;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -739,14 +733,14 @@ body {
 /* назанчение hover + focus соц.иконке -
 они назначаются ссылке и применяются
  к иконке, т.к. она указана в конце */
-.ourteam-social-link:hover .icon,
-.ourteam-social-link:focus .icon {
+.social-icons__link:hover .icon,
+.social-icons__link:focus .icon {
   fill: $accent-button-text;
 }
 
 /* our customers */
 
-.customers-header {
+.customers-section__header {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -758,43 +752,42 @@ body {
 
 .customers-list {
   display: inline-flex;
-  /* justify-content: space-between; */
 }
 
-.customer-item:not(:last-child) {
+.customers-list__item:not(:last-child) {
   margin-right: $card-set-gap;
 }
 
-.customer-item-link {
+.customers-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 170px;
   height: 90px;
-  border: 1px solid $social-link-color;
+  border: 1px solid $social__link-color;
   border-radius: 4px;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customer-icon {
-  fill: $social-link-color;
+.customers-list__icon {
+  fill: $social__link-color;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customer-item-link:hover .customer-icon,
-.customer-item-link:focus .customer-icon {
+.customers-list__link:hover .customers-list__icon,
+.customers-list__link:focus .customers-list__icon {
   fill: $accent-color;
 }
 
-.customer-item-link:hover,
-.customer-item-link:focus {
+.customers-list__link:hover,
+.customers-list__link:focus {
   border: 1px solid $accent-color;
 }
 
 /* formating footer */
-.section.page-footer {
+.page-footer {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: $hero-footer-bcg-color;
@@ -804,35 +797,34 @@ body {
 /* сетка элементов футера */
 .footer {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   align-items: baseline;
 }
 
 /* расчет ширины элемента выполнятся от ширины 1170px */
-.footer-item {
+.footer__item {
   flex-basis: calc((100% / 12) * 3 - 22.5px);
 }
 
-.footer-item:not(:first-of-type) {
+.footer__item:not(:first-of-type) {
   margin-left: 30px;
 }
 
 /* цвет логотипа Studio изменен на белый */
-.footer .logo {
-  display: block;
+.logo--footer {
   margin-bottom: 20px;
   margin-right: 0;
   padding: 0;
   color: $accent-button-text;
 }
 
-.footer .street {
+.street {
   color: $accent-button-text;
   font-style: normal;
   line-height: 1.19;
 }
 
-.address-item {
+.company-info__item {
   display: block;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
@@ -841,17 +833,17 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-item:not(:last-child) {
+.company-info__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.address-item:not(.street):hover,
-.address-item:not(.street):focus {
+.company-info__item:not(.street):hover,
+.company-info__item:not(.street):focus {
   color: $accent-color;
 }
 
-.social-call,
-.exclamation {
+.social__appeal,
+.call-to-sign__appeal {
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -859,7 +851,7 @@ body {
   color: $accent-button-text;
 }
 
-.social-link {
+.social__link {
   display: inline-flex;
   width: 44px;
   height: 44px;
@@ -873,7 +865,7 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:not(:last-child) {
+.social__link:not(:last-child) {
   margin-right: 10px;
 }
 
@@ -893,8 +885,8 @@ body {
   background-image: url(../images/svg/white_linkedin.svg);
 }
 
-.social-link:hover,
-.social-link:focus {
+.social__link:hover,
+.social__link:focus {
   background-color: $accent-color;
 }
 
@@ -903,16 +895,12 @@ body {
   flex-grow: 1;
 }
 
-/* form {
-  border: 1px solid red;
-} */
-
-.signup-form {
+.call-to-sign__input {
   display: flex;
   justify-content: space-between;
 }
 
-.email-field {
+.call-to-sign__email {
   padding-left: 16px;
 
   width: 358px;
@@ -925,7 +913,7 @@ body {
   background-color: transparent;
 }
 
-.email-field::placeholder {
+.call-to-sign__email::placeholder {
   font-size: 16px;
   line-height: 1.25;
   /* identical to box height, or 125% */
@@ -934,7 +922,7 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.email-submit {
+.submit {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -946,17 +934,9 @@ body {
   border-radius: 4px;
 }
 
-.fly {
+.submit__fly {
   fill: $accent-button-text;
   margin-left: 10px;
-}
-
-.email-submit > p {
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.87;
-
-  letter-spacing: 0.06em;
 }
 
 /* Страница Портфолио */
