--- a/css/main.css
+++ b/css/main.css
@@ -1014,29 +1014,27 @@ body {
   margin-left: 10px;
 }
 
-/* Страница Портфолио */
+/* Страница Портфолио Portfolio */
 /* раздел навигация - кнопки */
 .navigation {
-  margin-bottom: 50px;
-}
-
-.navigation-btns {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* flex-wrap: wrap; */
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-bottom: 50px;
 }
 
-.navigation-item:not(:last-child) {
+.navigation__item:not(:last-child) {
   display: block;
   margin-right: 8px;
   padding: 0;
 }
 
-.navigation .btn {
+.navigation__btn {
   background-color: #f5f4fa;
   color: #212121;
   padding-top: 6px;
@@ -1056,15 +1054,15 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation .btn-hover:hover,
-.navigation .btn-focus:focus {
+.btn-hover:hover,
+.btn-focus:focus {
   background-color: #2196f3;
   color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.description {
+.our-projects {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1074,7 +1072,7 @@ body {
   margin-left: calc(-1 * 30px);
 }
 
-.description-item {
+.our-projects-item {
   -ms-flex-preferred-size: calc((100% - 30px * 3) / 3);
       flex-basis: calc((100% - 30px * 3) / 3);
   margin-top: 30px;
@@ -1082,7 +1080,7 @@ body {
 }
 
 /* Описание работ Portfolio */
-.description-link {
+.our-projects__link {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1096,8 +1094,8 @@ body {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.description-link:hover,
-.description-link:focus {
+.our-projects__link:hover,
+.our-projects__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -1128,13 +1126,13 @@ body {
   color: #757575;
 }
 
-/* формирование overlay */
-.box-overlay {
+/* формирование box-overaly__item */
+.box-overaly {
   position: relative;
   overflow: hidden;
 }
 
-.overlay {
+.box-overaly__item {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -1150,14 +1148,14 @@ body {
 }
 
 /* при ховере или фокусе на ссылке применить оверлей */
-.description-link:hover .overlay,
-.description-link:focus .overlay {
+.our-projects__link:hover .box-overaly__item,
+.our-projects__link:focus .box-overaly__item {
   -webkit-transform: translateY(0);
           transform: translateY(0);
   background-color: #2196f3;
 }
 
-.portfolio .overlay-text {
+.portfolio .box-overaly__text {
   width: 322px;
   height: 168px;
   font-size: 18px;
