--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import './components/social-icons';
 @import './components/join-us';
 @import './components/sibscribe-form';
+@import './components/portfolio-nav';
 
 @import './layout/navigation-header';
 @import './layout/hero';
