--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
-*, ::after, ::before {
+*,
+::after,
+::before {
   box-sizing: border-box;
 }
 
@@ -19,7 +21,7 @@ body {
 }
 
 body {
-  font-family: system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji';
+  font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
 }
 
 hr {
@@ -31,12 +33,16 @@ abbr[title] {
   text-decoration: underline dotted;
 }
 
-b, strong {
+b,
+strong {
   font-weight: bolder;
 }
 
-code, kbd, pre, samp {
-  font-family: ui-monospace,SFMono-Regular,Consolas,'Liberation Mono',Menlo,monospace;
+code,
+kbd,
+pre,
+samp {
+  font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
   font-size: 1em;
 }
 
@@ -44,7 +50,8 @@ small {
   font-size: 80%;
 }
 
-sub, sup {
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -52,11 +59,11 @@ sub, sup {
 }
 
 sub {
-  bottom: -.25em;
+  bottom: -0.25em;
 }
 
 sup {
-  top: -.5em;
+  top: -0.5em;
 }
 
 table {
@@ -64,18 +71,26 @@ table {
   border-color: inherit;
 }
 
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
   font-family: inherit;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
 }
 
-button, select {
+button,
+select {
   text-transform: none;
 }
 
-[type=button], [type=reset], [type=submit], button {
+[type='button'],
+[type='reset'],
+[type='submit'],
+button {
   -webkit-appearance: button;
 }
 
@@ -100,11 +115,12 @@ progress {
   vertical-align: baseline;
 }
 
-::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
   height: auto;
 }
 
-[type=search] {
+[type='search'] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
@@ -255,10 +271,6 @@ body {
   margin-right: auto;
 }
 
-.navigation-block {
-  display: flex;
-}
-
 .navigation-block__link {
   position: relative;
   display: block;
@@ -277,7 +289,7 @@ body {
   display: flex;
 }
 
-.contacts > .contacts_link {
+.contacts > .contacts__link {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -285,8 +297,11 @@ body {
   padding-bottom: 32px;
 }
 
+.contacts__link + .contacts__link {
+  margin-left: 50px;
+}
+
 .e-mail {
-  /* display: inline-flex; */
   width: 16px;
   height: 12px;
   margin-right: 10px;
@@ -304,10 +319,6 @@ body {
 }
 
 /* установка расстояния 50px между элементами соседи */
-.contacts_link + .contacts_link {
-  margin-left: 50px;
-}
-
 /* logo style */
 .logo {
   display: block;
@@ -344,7 +355,7 @@ body {
   pointer-events: none;
 }
 
-.backdrop.is-hidden .modal {
+.backdrop.is-hidden.modal {
   transform: translate(-50%, -50%) scale(0.7);
 }
 
@@ -420,6 +431,10 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.label:nth-child(-n + 5) {
+  margin-top: 10px;
+}
+
 .label__input-field,
 .registration-form__comment {
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -427,10 +442,6 @@ body {
   height: 40px;
   padding-left: 42px;
   transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.registration-form .label:nth-child(-n + 5) {
-  margin-top: 10px;
 }
 
 .label:hover .label__icon,
@@ -468,6 +479,16 @@ body {
   margin-bottom: 30px;
 }
 
+.form-check__agreement {
+  line-height: 1.71;
+  color: #757575;
+  margin-right: 0.3em;
+}
+
+.form-check__link {
+  color: #2196f3;
+}
+
 .form-send {
   width: 200px;
   height: 50px;
@@ -488,7 +509,7 @@ body {
   overflow: hidden;
   opacity: 0;
 } */
-/* кастомный чек-бокс */
+/* формируем кастомный чек-бокс */
 .form-check__box {
   width: 16px;
   height: 15px;
@@ -499,27 +520,17 @@ body {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   box-shadow: 0 0 0 0.1em #212121;
+  /* Checked */
+  /* Focused */
 }
 
-/* Checked */
 .form-check__input:checked + .form-check__box {
   background-color: #2196f3;
   background-image: url(../images/svg/check_mark.svg);
 }
 
-/* Focused */
 .form-check__input:focus + .form-check__box {
   box-shadow: 0 0 0 0.1em #2196f3;
-}
-
-.form-check__agreement {
-  line-height: 1.71;
-  color: #757575;
-  margin-right: 0.3em;
-}
-
-.form-check__link {
-  color: #2196f3;
 }
 
 /* стилизация класса "кнопки" */
@@ -560,13 +571,6 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* при ховере или фокусе на ссылке применить оверлей */
-.our-projects__link:hover .overaly__item,
-.our-projects__link:focus .overaly__item {
-  transform: translateY(0);
-  background-color: #2196f3;
-}
-
 .overaly__text {
   width: 322px;
   height: 168px;
@@ -574,6 +578,13 @@ body {
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+
+/* при ховере или фокусе на ссылке применить оверлей */
+.our-projects__link:hover .overaly__item,
+.our-projects__link:focus .overaly__item {
+  transform: translateY(0);
+  background-color: #2196f3;
 }
 
 .icon {
@@ -602,14 +613,12 @@ body {
 }
 
 /* назанчение hover + focus фону иконки */
-.social-icons__link:hover,
-.social-icons__link:focus {
+.social-icons__link:hover, .social-icons__link:focus {
   background-color: #2196f3;
 }
 
-/* назанчение hover + focus соц.иконке -
-они назначаются ссылке и применяются
- к иконке, т.к. она указана в конце */
+/* назанчение hover и focus соц.иконке -
+при hover & focus по ссылке */
 .social-icons__link:hover .icon,
 .social-icons__link:focus .icon {
   fill: #ffffff;
@@ -639,6 +648,10 @@ body {
   margin-right: 10px;
 }
 
+.join-us__link:hover, .join-us__link:focus {
+  background-color: #2196f3;
+}
+
 .instagram {
   background-image: url(../images/svg/white_instagram.svg);
 }
@@ -653,11 +666,6 @@ body {
 
 .linkedin {
   background-image: url(../images/svg/white_linkedin.svg);
-}
-
-.join-us__link:hover,
-.join-us__link:focus {
-  background-color: #2196f3;
 }
 
 /* формирование формы ввода почты в футере */
@@ -681,7 +689,7 @@ body {
   background-color: transparent;
 }
 
-.call-to-sign__email::placeholder {
+.call-to-sign__email__email::placeholder {
   font-size: 16px;
   line-height: 1.25;
   /* identical to box height, or 125% */
@@ -736,34 +744,31 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation__btn:hover,
-.navigation__btn:focus {
+.navigation__btn:hover, .navigation__btn:focus {
   background-color: #2196f3;
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* декорация навигации по сайту */
-.navigation-block__link:hover,
-.navigation-block__link:focus {
+.navigation-block__link:hover, .navigation-block__link:focus {
   color: #2196f3;
 }
 
-.contacts_link:hover .e-mail,
-.contacts_link:focus .e-mail,
-.contacts_link:hover .smartphone,
-.contacts_link:focus .smartphone {
-  fill: #2196f3;
-}
-
-.contacts_link {
+.contacts__link {
   color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts_link:hover,
-.contacts_link:focus {
+.contacts__link:hover, .contacts__link:focus {
   color: #2196f3;
+}
+
+.contacts__link:hover .e-mail,
+.contacts__link:focus .e-mail,
+.contacts__link:hover .smartphone,
+.contacts__link:focus .smartphone {
+  fill: #2196f3;
 }
 
 .link-font {
@@ -788,7 +793,7 @@ body {
   margin: 0 auto;
 }
 
-/* формирование padding секции hero*/
+/* формирование padding секции hero и отступа перед кнопкой*/
 .hero__definition {
   padding-top: 200px;
   padding-bottom: 200px;
@@ -799,8 +804,7 @@ body {
   color: #ffffff;
 }
 
-/* отступ между заголовком и кнопкой */
-.hero__title {
+.hero__definition__title {
   margin-bottom: 30px;
   font-family: inherit;
   font-weight: 900;
@@ -927,7 +931,7 @@ body {
   background-color: #f5f4fa;
 }
 
-/* flex список Наша команда */
+/* flex список Наша команда - сетка */
 .ourteam-members {
   display: flex;
   flex-wrap: wrap;
@@ -945,6 +949,10 @@ body {
 }
 
 /* our-team представление членов команды */
+.ourteam-members {
+  /* подписи к фотографиям сотрудников */
+}
+
 .ourteam-members__title {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -955,18 +963,14 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  margin-bottom: 10px;
 }
 
-/* подписи к фотографиям сотрудников */
 .ourteam-members__position {
   color: #757575;
   font-size: 16px;
   line-height: 1.19;
   margin-bottom: 16px;
-}
-
-.ourteam-members__name {
-  margin-bottom: 10px;
 }
 
 /* our customers */
@@ -1005,12 +1009,11 @@ body {
 }
 
 .customers-list__link:hover .customers-list__icon,
-.customers-list__link:focus .customers-list__icon {
+.customers-list__icon .customers-list__link:focus {
   fill: #2196f3;
 }
 
-.customers-list__link:hover,
-.customers-list__link:focus {
+.customers-list__link:hover, .customers-list__link:focus {
   border: 1px solid #2196f3;
 }
 
@@ -1064,8 +1067,7 @@ body {
   margin-bottom: 9px;
 }
 
-.company-info__item:not(.street):hover,
-.company-info__item:not(.street):focus {
+.company-info__item:not(.street):hover, .company-info__item:not(.street):focus {
   color: #2196f3;
 }
 
