--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -19,8 +19,8 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-}
 
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.7);
+  &.modal {
+    transform: translate(-50%, -50%) scale(0.7);
+  }
 }
