--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -16,20 +16,16 @@
   flex-wrap: wrap;
   align-items: center;
   margin-right: auto;
-}
 
-.navigation-block {
-  display: flex;
-}
+  &__link {
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: $main-text-color;
 
-.navigation-block__link {
-  position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: $main-text-color;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 /* установка расстояния 50px между элементами */
@@ -39,18 +35,21 @@
 
 .contacts {
   display: flex;
-}
 
-.contacts > .contacts_link {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  & > .contacts__link {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
+  &__link + &__link {
+    margin-left: 50px;
+  }
 }
 
 .e-mail {
-  /* display: inline-flex; */
   width: 16px;
   height: 12px;
   margin-right: 10px;
@@ -70,6 +69,6 @@
 }
 
 /* установка расстояния 50px между элементами соседи */
-.contacts_link + .contacts_link {
-  margin-left: 50px;
-}
+// .contacts__link + .contacts__link {
+//   margin-left: 50px;
+// }
