--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,16 +29,16 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-close__icon {
-  fill: #000;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
+  &__icon {
+    fill: #000;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 
-.modal-close:hover .modal-close__icon {
-  fill: $accent-color;
+    .modal-close:hover & {
+      fill: $accent-color;
+    }
+  }
 }
