--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -3,34 +3,36 @@
 .overaly {
   position: relative;
   overflow: hidden;
-}
 
-.overaly__item {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
+  &__item {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
 
-  padding: 63px 24px;
+    padding: 63px 24px;
 
-  transform: translateY(100%);
+    transform: translateY(100%);
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__text {
+    width: 322px;
+    height: 168px;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: $accent-button-text;
+  }
 }
 
 /* при ховере или фокусе на ссылке применить оверлей */
-.our-projects__link:hover .overaly__item,
-.our-projects__link:focus .overaly__item {
-  transform: translateY(0);
-  background-color: $accent-color;
-}
-
-.overaly__text {
-  width: 322px;
-  height: 168px;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  color: $accent-button-text;
+.overaly__item {
+  .our-projects__link:hover &,
+  .our-projects__link:focus & {
+    transform: translateY(0);
+    background-color: $accent-color;
+  }
 }
