--- a/sass/components/_registration-form.scss
+++ b/sass/components/_registration-form.scss
@@ -2,35 +2,39 @@
 .registration-form {
   display: flex;
   flex-direction: column;
-}
 
-.registration-form__header {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.05;
-  text-align: center;
-  letter-spacing: 0.03em;
+  &__header {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.05;
+    text-align: center;
+    letter-spacing: 0.03em;
 
-  color: $main-text-color;
-  margin-bottom: 12px;
+    color: $main-text-color;
+    margin-bottom: 12px;
+  }
 }
 
 .label {
   position: relative;
   display: flex;
   flex-direction: column;
-}
 
-.label__description {
-  margin-bottom: 4px;
-}
+  &__description {
+    margin-bottom: 4px;
+  }
 
-.label__icon {
-  position: absolute;
-  left: 12px;
-  top: 30px;
+  &__icon {
+    position: absolute;
+    left: 12px;
+    top: 30px;
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &:nth-child(-n + 5) {
+    margin-top: 10px;
+  }
 }
 
 .label__input-field,
@@ -41,10 +45,6 @@
   padding-left: 42px;
 
   transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.registration-form .label:nth-child(-n + 5) {
-  margin-top: 10px;
 }
 
 .label__icon {
@@ -85,6 +85,16 @@
   align-items: center;
   margin-top: 20px;
   margin-bottom: 30px;
+
+  &__agreement {
+    line-height: 1.71;
+    color: $secondary-text-color;
+    margin-right: 0.3em;
+  }
+
+  &__link {
+    color: $accent-color;
+  }
 }
 
 .form-send {
@@ -109,7 +119,7 @@
   opacity: 0;
 } */
 
-/* кастомный чек-бокс */
+/* формируем кастомный чек-бокс */
 .form-check__box {
   width: 16px;
   height: 15px;
@@ -120,27 +130,14 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   box-shadow: 0 0 0 0.1em $main-text-color;
-}
 
-/* Checked */
-
-.form-check__input:checked + .form-check__box {
-  background-color: $accent-color;
-  background-image: url(../images/svg/check_mark.svg);
-}
-
-/* Focused */
-
-.form-check__input:focus + .form-check__box {
-  box-shadow: 0 0 0 0.1em $accent-color;
-}
-
-.form-check__agreement {
-  line-height: 1.71;
-  color: $secondary-text-color;
-  margin-right: 0.3em;
-}
-
-.form-check__link {
-  color: $accent-color;
+  /* Checked */
+  .form-check__input:checked + & {
+    background-color: $accent-color;
+    background-image: url(../images/svg/check_mark.svg);
+  }
+  /* Focused */
+  .form-check__input:focus + & {
+    box-shadow: 0 0 0 0.1em $accent-color;
+  }
 }
