--- a/sass/components/_sibscribe-form.scss
+++ b/sass/components/_sibscribe-form.scss
@@ -1,33 +1,33 @@
 /* формирование формы ввода почты в футере */
 .call-to-sign {
   flex-grow: 1;
-}
 
-.call-to-sign__input {
-  display: flex;
-  justify-content: space-between;
-}
+  &__input {
+    display: flex;
+    justify-content: space-between;
+  }
 
-.call-to-sign__email {
-  padding-left: 16px;
+  &__email {
+    padding-left: 16px;
 
-  width: 358px;
-  height: 50px;
+    width: 358px;
+    height: 50px;
 
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: transparent;
-}
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
 
-.call-to-sign__email::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  /* identical to box height, or 125% */
-  letter-spacing: 0.03em;
+    &__email::placeholder {
+      font-size: 16px;
+      line-height: 1.25;
+      /* identical to box height, or 125% */
+      letter-spacing: 0.03em;
 
-  color: rgba(255, 255, 255, 0.6);
+      color: rgba(255, 255, 255, 0.6);
+    }
+  }
 }
 
 .submit {
@@ -40,9 +40,9 @@
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-}
 
-.submit__fly {
-  fill: $accent-button-text;
-  margin-left: 10px;
+  &__fly {
+    fill: $accent-button-text;
+    margin-left: 10px;
+  }
 }
