--- a/sass/components/_social-icons.scss
+++ b/sass/components/_social-icons.scss
@@ -1,32 +1,37 @@
 .social-icons {
   display: inline-flex;
-}
 
-.social-icons__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.social-icons__item:not(:last-child) {
-  margin-right: 10px;
+  &__item:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
 /* назанчение hover + focus фону иконки */
-.social-icons__link:hover,
-.social-icons__link:focus {
-  background-color: $accent-color;
+
+.social-icons__link {
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
 }
 
-/* назанчение hover + focus соц.иконке -
-они назначаются ссылке и применяются
- к иконке, т.к. она указана в конце */
-.social-icons__link:hover .icon,
-.social-icons__link:focus .icon {
-  fill: $accent-button-text;
+/* назанчение hover и focus соц.иконке -
+при hover & focus по ссылке */
+
+.icon {
+  .social-icons__link:hover &,
+  .social-icons__link:focus & {
+    fill: $accent-button-text;
+  }
 }
