--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -12,36 +12,40 @@
 
 .customers-list {
   display: inline-flex;
-}
 
-.customers-list__item:not(:last-child) {
-  margin-right: $card-set-gap;
-}
+  &__item:not(:last-child) {
+    margin-right: $card-set-gap;
+  }
 
-.customers-list__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 170px;
-  height: 90px;
-  border: 1px solid $social__link-color;
-  border-radius: 4px;
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 90px;
+    border: 1px solid $social__link-color;
+    border-radius: 4px;
 
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__icon {
+    fill: $social__link-color;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .customers-list__icon {
-  fill: $social__link-color;
-
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .customers-list__link:hover &,
+  .customers-list__link:focus {
+    fill: $accent-color;
+  }
 }
 
-.customers-list__link:hover .customers-list__icon,
-.customers-list__link:focus .customers-list__icon {
-  fill: $accent-color;
-}
-
-.customers-list__link:hover,
-.customers-list__link:focus {
-  border: 1px solid $accent-color;
+.customers-list__link {
+  &:hover,
+  &:focus {
+    border: 1px solid $accent-color;
+  }
 }
