--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -16,10 +16,10 @@
 /* расчет ширины элемента выполнятся от ширины 1170px */
 .footer__item {
   flex-basis: calc((100% / 12) * 3 - 22.5px);
-}
 
-.footer__item:not(:first-of-type) {
-  margin-left: 30px;
+  &:not(:first-of-type) {
+    margin-left: 30px;
+  }
 }
 
 /* цвет логотипа Studio изменен на белый */
@@ -43,13 +43,15 @@
   line-height: 1.19;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.company-info__item:not(:last-child) {
-  margin-bottom: 9px;
-}
+  &:not(:last-child) {
+    margin-bottom: 9px;
+  }
 
-.company-info__item:not(.street):hover,
-.company-info__item:not(.street):focus {
-  color: $accent-color;
+  &:not(.street) {
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+  }
 }
