--- a/sass/layout/_navigation-header.scss
+++ b/sass/layout/_navigation-header.scss
@@ -1,25 +1,27 @@
 /* декорация навигации по сайту */
-.navigation-block__link:hover,
-.navigation-block__link:focus {
-  color: $accent-color;
+
+.navigation-block__link {
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
-.contacts_link:hover .e-mail,
-.contacts_link:focus .e-mail,
-.contacts_link:hover .smartphone,
-.contacts_link:focus .smartphone {
-  fill: $accent-color;
-}
-
-.contacts_link {
+.contacts__link {
   color: $secondary-text-color;
-
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.contacts_link:hover,
-.contacts_link:focus {
-  color: $accent-color;
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+
+  &:hover .e-mail,
+  &:focus .e-mail,
+  &:hover .smartphone,
+  &:focus .smartphone {
+    fill: $accent-color;
+  }
 }
 
 .link-font {
