--- a/sass/layout/_our-activity_team.scss
+++ b/sass/layout/_our-activity_team.scss
@@ -3,6 +3,7 @@
   padding-top: 0;
 }
 
+// формирование сетки элементов секции
 .activity-description {
   display: flex;
   /* Делаем Flex-контейнет многострочным */
@@ -10,14 +11,14 @@
   /* Компенсируем маржины элементов */
   margin-left: calc(-1 * #{$card-set-gap});
   margin-top: calc(-1 * #{$card-set-gap});
-}
 
-.activity-description__item {
-  /* Задаём всем элементам маржины слева и сверху */
-  margin-left: #{$card-set-gap};
-  margin-top: #{$card-set-gap};
-  /*  Задаём ширину элементов  */
-  flex-basis: calc((100% - #{$card-set-gap} * 3) / 3);
+  &__item {
+    /* Задаём всем элементам маржины слева и сверху */
+    margin-left: #{$card-set-gap};
+    margin-top: #{$card-set-gap};
+    /*  Задаём ширину элементов  */
+    flex-basis: calc((100% - #{$card-set-gap} * 3) / 3);
+  }
 }
 
 .company-activity__header,
@@ -29,27 +30,29 @@
   line-height: 1.17;
 }
 
-.activity-description__thumb {
-  position: relative;
-}
+.activity-description {
+  &__thumb {
+    position: relative;
+  }
 
-.activity-description__thumb-text {
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  &__thumb-text {
+    position: absolute;
+    left: 0;
+    bottom: 0;
 
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 70px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
 
-  background: rgba(47, 48, 58, 0.8);
+    background: rgba(47, 48, 58, 0.8);
 
-  font-weight: 700;
-  text-transform: uppercase;
-  color: $accent-button-text;
-  /* border: 1px solid red; */
+    font-weight: 700;
+    text-transform: uppercase;
+    color: $accent-button-text;
+    /* border: 1px solid red; */
+  }
 }
 
 /* секция ourteam */
@@ -58,45 +61,43 @@
   background-color: $secondary-bcg;
 }
 
-/* flex список Наша команда */
+/* flex список Наша команда - сетка */
 .ourteam-members {
   display: flex;
   flex-wrap: wrap;
   /* Компенсируем маржины элементов */
   margin-left: calc(-1 * #{$card-set-gap});
   margin-top: calc(-1 * #{$card-set-gap});
-}
 
-.ourteam-members__item {
-  flex-basis: calc((100% - #{$card-set-gap} * 4) / 4);
-  margin-left: #{$card-set-gap};
-  margin-top: #{$card-set-gap};
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+  &__item {
+    flex-basis: calc((100% - #{$card-set-gap} * 4) / 4);
+    margin-left: #{$card-set-gap};
+    margin-top: #{$card-set-gap};
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
 }
 
 /* our-team представление членов команды */
-.ourteam-members__title {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  text-align: center;
-}
+.ourteam-members {
+  &__title {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: center;
+  }
 
-.ourteam-members__name {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-}
-
-/* подписи к фотографиям сотрудников */
-.ourteam-members__position {
-  color: $secondary-text-color;
-  font-size: 16px;
-  line-height: 1.19;
-  margin-bottom: 16px;
-}
-
-.ourteam-members__name {
-  margin-bottom: 10px;
+  &__name {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    margin-bottom: 10px;
+  }
+  /* подписи к фотографиям сотрудников */
+  &__position {
+    color: $secondary-text-color;
+    font-size: 16px;
+    line-height: 1.19;
+    margin-bottom: 16px;
+  }
 }
