--- a/sass/layout/_priorities.scss
+++ b/sass/layout/_priorities.scss
@@ -5,12 +5,12 @@
   flex-wrap: wrap;
   margin-top: calc(-1 * #{$card-set-gap});
   margin-left: calc(-1 * #{$card-set-gap});
-}
 
-.priorities__item {
-  flex-basis: calc((100% - #{$card-set-gap} * 4) / 4);
-  margin-top: #{$card-set-gap};
-  margin-left: #{$card-set-gap};
+  &__item {
+    flex-basis: calc((100% - #{$card-set-gap} * 4) / 4);
+    margin-top: #{$card-set-gap};
+    margin-left: #{$card-set-gap};
+  }
 }
 
 .priorities__item + .priorities__item {
