hero section - __title

--- a/css/main.css
+++ b/css/main.css
@@ -804,7 +804,7 @@ body {
   color: #ffffff;
 }
 
-.hero__definition__title {
+.hero__title {
   margin-bottom: 30px;
   font-family: inherit;
   font-weight: 900;
