--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -29,14 +29,14 @@
   margin-right: auto;
   margin-left: auto;
   color: $accent-button-text;
+}
 
-  &__title {
-    margin-bottom: 30px;
-    font-family: inherit;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-  }
+.hero__title {
+  margin-bottom: 30px;
+  font-family: inherit;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
