--- a/sass/layout/_navigation-header.scss
+++ b/sass/layout/_navigation-header.scss
@@ -1,6 +1,10 @@
 /* декорация навигации по сайту */
 
 .navigation-block__link {
+  &.current {
+    color: $accent-color;
+  }
+
   &:hover,
   &:focus {
     color: $accent-color;
