откорректирована секция Header & current_underline перемещена в components

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 /* header - верхняя линия сайта */
-.header--geometry {
+.header {
   padding-top: 0;
   padding-bottom: 0;
   border-bottom: 1px solid #ececec;
@@ -25,12 +25,24 @@
     color: $main-text-color;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
   }
 }
 
 /* установка расстояния 50px между элементами */
 .navigation-block__item:not(:last-child) {
   margin-right: 50px;
+}
+
+.link-font {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .contacts {
@@ -42,6 +54,23 @@
     align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;
+  }
+
+  &__link {
+    color: $secondary-text-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+
+    &:hover .e-mail,
+    &:focus .e-mail,
+    &:hover .smartphone,
+    &:focus .smartphone {
+      fill: $accent-color;
+    }
   }
 
   &__link + &__link {
@@ -67,8 +96,3 @@
 
   transition: fill 250 ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/* установка расстояния 50px между элементами соседи */
-// .contacts__link + .contacts__link {
-//   margin-left: 50px;
-// }
