--- a/css/main.css
+++ b/css/main.css
@@ -149,22 +149,6 @@ summary {
 /* цвет акцентированного цвета ссылок #2196f3 */
 /* цвет фона разделов hero & footer  #2f303a */
 /* установка зазора между элементами flexbox --card-set-gap: 30px; */
-.current {
-  color: #2196f3;
-}
-
-.current::after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  bottom: -1px;
-  transform: translate(-50%, 0);
-  width: 48px;
-  height: 4px;
-  background-image: url(../images/svg/line.svg);
-  background-repeat: no-repeat;
-}
-
 html {
   box-sizing: border-box;
 }
@@ -252,7 +236,7 @@ body {
 }
 
 /* header - верхняя линия сайта */
-.header--geometry {
+.header {
   padding-top: 0;
   padding-bottom: 0;
   border-bottom: 1px solid #ececec;
@@ -280,9 +264,20 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.navigation-block__link:hover, .navigation-block__link:focus {
+  color: #2196f3;
+}
+
 /* установка расстояния 50px между элементами */
 .navigation-block__item:not(:last-child) {
   margin-right: 50px;
+}
+
+.link-font {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .contacts {
@@ -295,6 +290,22 @@ body {
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
+}
+
+.contacts__link {
+  color: #757575;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts__link:hover, .contacts__link:focus {
+  color: #2196f3;
+}
+
+.contacts__link:hover .e-mail,
+.contacts__link:focus .e-mail,
+.contacts__link:hover .smartphone,
+.contacts__link:focus .smartphone {
+  fill: #2196f3;
 }
 
 .contacts__link + .contacts__link {
@@ -318,7 +329,22 @@ body {
   transition: fill 250 ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* установка расстояния 50px между элементами соседи */
+.current {
+  color: #2196f3;
+}
+
+.current::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -1px;
+  transform: translate(-50%, 0);
+  width: 48px;
+  height: 4px;
+  background-image: url(../images/svg/line.svg);
+  background-repeat: no-repeat;
+}
+
 /* logo style */
 .logo {
   display: block;
@@ -754,37 +780,6 @@ body {
 }
 
 /* декорация навигации по сайту */
-.navigation-block__link.current {
-  color: #2196f3;
-}
-
-.navigation-block__link:hover, .navigation-block__link:focus {
-  color: #2196f3;
-}
-
-.contacts__link {
-  color: #757575;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contacts__link:hover, .contacts__link:focus {
-  color: #2196f3;
-}
-
-.contacts__link:hover .e-mail,
-.contacts__link:focus .e-mail,
-.contacts__link:hover .smartphone,
-.contacts__link:focus .smartphone {
-  fill: #2196f3;
-}
-
-.link-font {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-
 /* стилизация Главного блока Hero */
 .hero {
   padding: 0;
