--- a/css/main.css
+++ b/css/main.css
@@ -711,6 +711,7 @@ body {
   padding-left: 16px;
   width: 358px;
   height: 50px;
+  color: #fff;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -718,7 +719,11 @@ body {
   background-color: transparent;
 }
 
-.call-to-sign__email__email::placeholder {
+.call-to-sign__email:invalid:not(:focus) {
+  color: red;
+}
+
+.call-to-sign__email::placeholder {
   font-size: 16px;
   line-height: 1.25;
   /* identical to box height, or 125% */
